<resources>
    <string name="app_name">OTEA</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="welcome">Welcome to OTEA\'s app</string>
    <string name="start_evaluation">Start indicators evaluation</string>
    <string name="indicator_caption">Indicator Caption</string>
    <string name="evidence1">Evidence 1</string>
    <string name="evidence2">Evidence 2</string>
    <string name="evidence3">Evidence 3</string>
    <string name="evidence4">Evidence 4</string>
    <string name="previous_indicator">Previous Indicator</string>
    <string name="next_indicator">Next Indicator</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="users_email">Email</string>
    <string name="users_password">User\'s password</string>
    <string name="invalid_username">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="add_new_evaluated_org">Add new evaluated organization</string>
    <string name="add_new_complete_evaluation">Add new complete evaluation</string>
    <string name="add_new_simple_evaluation">Add new simple evaluation</string>
    <string name="navigation_drawer_close" translatable="false">Close navig drawer</string>
    <string name="title_activity_main_menu">Main Menu</string>
    <string name="title_activity_settings">Settings</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="add_new_evaluated_org_center">Add new evaluated organization center</string>
    <string name="modify_database">Modify database</string>
    <string name="modify_indicators">Modify indicators</string>
    <string name="recent_activity">Main menu</string>
    <string name="help">Help</string>
    <string name="view_indicators_evolution">View realized tests</string>
    <string name="login_failed">Please check your Internet connection and try again later</string>
    <string name="title_activity_register">Register</string>
    <string name="first_name_user">First name</string>
    <string name="last_name_user">Last name</string>
    <string name="email_reg">Email</string>
    <string name="password_reg">Password</string>
    <string name="telephone_reg">Phone number</string>
    <string name="user_type_reg">User type</string>
    <string name="evaluated_org_user_reg">Evaluated organization user</string>
    <string name="fMiradas_user_reg">Fundación Miradas user</string>
    <string name="select_user_type">Select user type</string>
    <string-array name="menu_user_type">
        <item>@string/evaluated_org_user_reg</item>
        <item>@string/fMiradas_user_reg</item>
    </string-array>
    <string-array name="menu_org_evaluated">
        <item>@string/select_evaluated_org</item>
    </string-array>
    <string name="LOPD_user_reg">"I allow that Fundación Miradas keeps records of my data keep records of my data in accordance with the law equivalent to the Spanish law LOPD on data protection "</string>
    <string name="wrong_phone">Incorrect phone.</string>
    <string name="contry_phone_config">Enter 00 and your country code before your phone number (except Spain)</string>
    <string name="mandatory_first_name">Please enter your first name</string>
    <string name="mandatory_last_name">Please enter your last name</string>
    <string name="mandatory_email">Please enter your email</string>
    <string name="wrong_email">The email provided is not correct, please enter a real email</string>
    <string name="mandatory_phone">Please enter a phone number</string>
    <string name="wrong_telephone">Incorrect phone number</string>
    <string name="mandatory_password">The password must meet the following requirements:
    - Contain at least 6 characters.
    - Include at least one capital letter.
    - Include at least one lowercase letter.
    - Include at least one number.
    - Include at least one of the following symbols: "$&amp;%#.!"^*¨_:;/*-+&gt;&lt;()=¿?¡!"</string>
    <string name="select_evaluated_org">Select evaluated organization</string>
    <string name="wrong_password">Incorrect password</string>
    <string name="hey_user">Hi user!</string>
    <string name="add_new_evaluator_team">Add new evaluator team</string>
    <string name="add_new_center">Add new center or service</string>
    <string name="add_new_indicators_evaluation">Add new indicators evaluation</string>
    <string name="add_new_evaluated_organization">Add organization or service</string>
    <string name="org_name">Name of the organization</string>
    <string name="org_address">Address</string>
    <string name="org_zipcode">Zip code</string>
    <string name="org_city">City</string>
    <string name="org_province">Province</string>
    <string name="org_region">Region</string>
    <string name="org_country">Country</string>
    <string name="please_org_name">You must enter the name of the organization or service</string>
    <string name="please_address">You must enter the address</string>
    <string name="please_city">You must enter the name of the city</string>
    <string name="please_province">You must enter the name of the province</string>
    <string name="please_region">You must enter the name of the region</string>
    <string name="please_zipcode">Please enter the zip code</string>
    <string name="more_info">More information</string>
    <string name="add_director">Add organization director</string>
    <string name="edit_director">Edit organization director</string>
    <string name="add_professional">Add direct care professional</string>
    <string name="edit_professional">Edit direct care professional</string>
    <string name="add_center">Add new center</string>
    <string name="title_activity_register_org_user">RegisterOrgUser</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="description_center">Center description</string>
    <string name="please_description_center">Please enter description center</string>
    <string name="please_director">Please enter a organization director</string>
    <string name="please_professional">Please select a direct care professional</string>
    <string name="please_wait_login">Connecting to database to login. Please wait a few seconds...</string>
    <string name="please_wait_register_user">Registering user...</string>
    <string name="please_wait_reg_orgs">Registering organization...</string>
    <string name="please_wait">Please wait...</string>
    <string name="do_you_want_to_exit_otea">Do you want to exit from OTEA?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="loading_evidences">Loading evidences...</string>
    <string name="start">Start</string>
    <string name="patient_name">ASD person name</string>
    <string name="relative_name">ASD person\'s relative name</string>
    <string name="select_evaluated_organization">Evaluated organization:</string>
    <string name="select_external_consultant">External consultant</string>
    <string name="non_existing_evaluated_organization_old">There is none evaluator organization, please add one to continue</string>
    <string name="non_existing_evaluator_team">There is non existing evaluator team, please add a new one to continue</string>
    <string name="please_patient_name">Please enter ASD person name</string>
    <string name="please_relative_name">Please enter ASD person\'s relative name</string>
    <string name="please_evaluated_org">Please select an evaluated organization</string>
    <string name="please_consultant">Please select an external consultant</string>
    <string name="please_responsible">Please select a responsible</string>
    <string name="evaluated_org">Organization</string>
    <string name="consultant">External consultant</string>
    <string name="professional">Direct attendance professional</string>
    <string name="responsible">Responsible</string>
    <string name="evaluator_team">Evaluator team</string>
    <string name="calculating_results">Calculating results...</string>
    <string name="loading_indicators">Loading indicators...</string>
    <string name="creation_date">Creation date</string>
    <string name="eval_date_1">Evaluation date 1</string>
    <string name="eval_date_2">Evaluation date 2</string>
    <string name="eval_date_3">Evaluation date 3</string>
    <string name="eval_date_4">Evaluation date 4</string>
    <string name="observations">Observations</string>
    <string name="please_date">Please enter a date here</string>
    <string name="turning_back_to_org">Turning back to organization creation...</string>
    <string name="adding_center">Adding center.. Please wait a few seconds...</string>
    <string name="adding_org">Adding organization... Please wait a few seconds...</string>
    <string name="going_director">Going to director form... Please wait a few seconds...</string>
    <string name="fulfilled_evidence">Fulfilled Evidence</string>
    <string name="unfulfilled_evidence">Unfulfilled Evidence</string>
    <string name="help_ind_eval1">At the top of your screen, you will see the title of the indicator along with the scope and subdivisions to which it belongs. Below, there will be three evidences (if it is a simple indicator evaluation) or four evidences (if it is a comprehensive indicator evaluation), which can be fulfilled or not fulfilled:</string>
    <string name="requires_improvement_plan">The indicator needs to be in the improvement plan</string>
    <string name="improvement_opportunities">Opportunities for improvement</string>
    <string name="about_indicator">About indicator</string>
    <string name="about_the_evidence_1">About the evidence 1</string>
    <string name="about_the_evidence_2">About the evidence 2</string>
    <string name="about_the_evidence_3">About the evidence 3</string>
    <string name="fulfilled_evidences">Fulfilled evidences</string>
    <string name="id_data">Identification data</string>
    <string name="eval_team">Evaluator team</string>
    <string name="strengths">Strenghts</string>
    <string name="eval_process">Evaluation process</string>
    <string name="results">Results</string>
    <string name="overall_assessment">Overall assessment</string>
    <string name="overall_help">The overall assessment is in Spanish. Please select the text below and choose Translate.</string>
    <string name="ind_info_help">The improvement opportunities are in Spanish. Please select the text of the improvement opportunity on the indicator or the improvement opportunities on the evidence and select Translate.</string>
</resources>