<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/indicator_caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/indicator_caption"
            android:textSize="15sp"
            android:gravity="center"
            android:padding="25dp"
            android:textColor="@color/black" />
        <CheckBox
            android:id="@+id/requires_improvement_plan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/requires_improvement_plan"
            android:textSize="15sp"
            android:textStyle="italic"
            android:layoutDirection="rtl"
            android:button="@drawable/requires_improvement_plan_selector"
            android:padding="15dp"
            android:clickable="false"/>

        <TextView
            android:id="@+id/fulfilled_evidences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fulfilled_evidences"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/black" />

        <CheckBox
            android:id="@+id/evidence1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/evidence1"
            android:textSize="15sp"
            android:layoutDirection="rtl"
            android:background="@drawable/switch_style"
            android:buttonTint="@color/checkbox_color"
            android:padding="5dp"
            android:clickable="false"/>
        <CheckBox
            android:id="@+id/evidence2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/evidence2"
            android:textSize="15sp"
            android:layoutDirection="rtl"
            android:background="@drawable/switch_style"
            android:buttonTint="@color/checkbox_color"
            android:padding="5dp"
            android:clickable="false"/>
        <CheckBox
            android:id="@+id/evidence3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/evidence3"
            android:textSize="15sp"
            android:layoutDirection="rtl"
            android:background="@drawable/switch_style"
            android:buttonTint="@color/checkbox_color"
            android:padding="5dp"
            android:clickable="false"/>


        <TextView
            android:id="@+id/improvement_proposals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/improvement_opportunities"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/info_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ind_info_help"
            android:textSize="12sp"
            android:textStyle="italic"
            android:gravity="center"
            android:padding="5dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/about_indicator_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_indicator"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            android:padding="5dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/about_indicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/improvement_opportunities"
            android:textSize="15sp"
            android:padding="5dp"
            android:textColor="@color/black" />


        <TextView
            android:id="@+id/about_ev_1_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_the_evidence_1"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            android:padding="5dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/about_ev_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/improvement_opportunities"
            android:textSize="15sp"
            android:padding="5dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/about_ev_2_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_the_evidence_2"
            android:textStyle="bold|italic"
            android:textSize="16sp"
            android:padding="5dp"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/about_ev_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/improvement_opportunities"
            android:textSize="15sp"
            android:textIsSelectable="true"
            android:padding="5dp"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/about_ev_3_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_the_evidence_3"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            android:padding="5dp"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/about_ev_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/improvement_opportunities"
            android:textSize="15sp"
            android:padding="5dp"
            android:textColor="@color/black" />
    </LinearLayout>
</ScrollView>
