<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gui.RegisterOrgUser">

    <LinearLayout
        android:layout_width="415dp"
        android:layout_height="908dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091">

        <!-- Agrega tus vistas o diseños aquí -->
        <EditText
            android:id="@+id/first_name_reg"
            android:layout_width="348dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/first_name_user"
            android:inputType="text" />

        <EditText
            android:id="@+id/last_name_reg"
            android:layout_width="348dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/last_name_user"
            android:inputType="text" />

        <EditText
            android:id="@+id/email_reg"
            android:layout_width="348dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:hint="@string/email_reg"
            android:inputType="textEmailAddress" />


        <EditText
            android:id="@+id/password_reg"
            android:layout_width="348dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:hint="@string/password_reg"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/telephone_reg"
            android:layout_width="348dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:hint="@string/telephone_reg"
            android:inputType="phone" />

        <Button
            android:id="@+id/register_finished"
            android:layout_width="348dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:text="@string/add_director" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>