<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/idDataTitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/id_data" />

        <TextView
            android:id="@+id/idData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textColor="@color/black"
            android:text="TextView" />

        <TextView
            android:id="@+id/evalTeamTitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/eval_team" />

        <TextView
            android:id="@+id/evalTeam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textColor="@color/black"
            android:text="TextView" />

        <TextView
            android:id="@+id/evalProcTitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/eval_process" />

        <TextView
            android:id="@+id/evalProc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textColor="@color/black"
            android:text="TextView" />

        <TextView
            android:id="@+id/overallTitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/overall_assessment" />

        <TextView
            android:id="@+id/helpOverall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="12sp"
            android:textStyle="italic"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/overall_help" />

        <TextView
            android:id="@+id/overall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textColor="@color/black"
            android:text="TextView" />

        <TextView
            android:id="@+id/strengthsTitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/strengths" />

        <TextView
            android:id="@+id/strengths"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textColor="@color/black"
            android:text="TextView" />

        <TextView
            android:id="@+id/resultsTitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/results" />

        <TextView
            android:id="@+id/results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textColor="@color/black"
            android:text="TextView" />

        <include
            layout="@layout/points_table"
            android:layout_width="match_parent"
            android:layout_height="500dp" />


    </LinearLayout>
</ScrollView>