<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_ind_eval1"
        android:textColor="@color/black" />

    <Switch
        android:id="@+id/enabledEv"
        android:checked="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:autoSizeMaxTextSize="14dp"
        android:autoSizeMinTextSize="10dp"
        android:text="@string/fulfilled_evidence"
        android:clickable="false"
        android:textColor="@color/black"
        android:textStyle="italic"/>

    <Switch
        android:id="@+id/disabledEv"
        android:checked="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:autoSizeMaxTextSize="14dp"
        android:autoSizeMinTextSize="10dp"
        android:text="@string/unfulfilled_evidence"
        android:clickable="false"
        android:textColor="@color/black"
        android:textStyle="italic"/>
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_ind_eval1"
        android:textColor="@color/black" />

</LinearLayout>